# show

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  buildlib  compile_commands.json  nob.c  readme.md  show.md  todo.md  valgrind.xml  window.c
include/: csapp.h  stretchy.h
res/: SIL Open Font License.txt
scratch/: image-mediainfo.c  image-scratch.c  inotify-man-page-example.c  pthread_create_manpage.txt  pthread_setname_np.txt  str-to-double.c
shows/: butt.md  cars.md  cool-af.md  negotiate.md  show.md  sleep.md  test.md  ubmc.md
src/: game.c  game.h  main.c  show.c  show.h
src/lib/: csapp.c  csapp.h  ino.h  stretchy.h
test/: test.c
valgrind/: valgrind-window.c.with-supp.xml  valgrind-window.c.with-supp.xsd  valgrind.1.xml  valgrind.supp
